objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>L2O_Anchor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Twin field</description>
        <label>Anchor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Billing_Periods__c</fullName>
        <formula>IF (ISPICKVAL(SBQQ__BillingFrequency__c, &quot;Monthly&quot;), SBQQ__SubscriptionTerm__c / 1,
IF( (ISPICKVAL(SBQQ__BillingFrequency__c, &quot;Quarterly&quot;)), SBQQ__SubscriptionTerm__c / 12 * 4,
IF( (ISPICKVAL(SBQQ__BillingFrequency__c, &quot;Semiannual&quot;)), SBQQ__SubscriptionTerm__c / 12 * 2,
IF( (ISPICKVAL(SBQQ__BillingFrequency__c, &quot;Annual&quot;)), SBQQ__SubscriptionTerm__c / 12,
IF( (ISPICKVAL(SBQQ__BillingFrequency__c, &quot;Invoice Plan&quot;)) , NULL,
NULL )))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Periods</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Broadcast_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Broadcast Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Bundle_Type__c</fullName>
        <description>Twin Field</description>
        <label>Bundle Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2O_Bundle_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Bundled__c</fullName>
        <formula>SBQQ__QuoteLine__r.SBQQ__Bundled__c</formula>
        <label>Bundled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Consult_Fee__c</fullName>
        <description>Twin Field</description>
        <label>Consult Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Consult_Type__c</fullName>
        <label>Consult Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Consult_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Do_Not_Invoice__c</fullName>
        <formula>SBQQ__QuoteLine__r.SBQQ__Bundled__c</formula>
        <label>Do Not Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_ERP_SO_Line__c</fullName>
        <label>ERP SO Line #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Effective_Quantity__c</fullName>
        <description>The quantity integrated with downstream systems. Same as Ordered Quantity unless the product is a Percent of Total subscription, then this value is the the related Subscription&apos;s Quantity.</description>
        <formula>IF(ISPICKVAL(SBQQ__SubscriptionPricing__c, &quot;Percent Of Total&quot;), SBQQ__Subscription__r.SBQQ__Quantity__c, SBQQ__OrderedQuantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The quantity integrated with downstream systems. Same as Ordered Quantity unless the product is a Percent of Total subscription, then this value is the the related Subscription&apos;s Quantity.</inlineHelpText>
        <label>Effective Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Fee_Code__c</fullName>
        <description>Twin Field</description>
        <label>Fee Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Fee_Description__c</fullName>
        <description>To capture the parent product for which this fee is applied.</description>
        <label>Fee Description</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fee_Description</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Fee_Type__c</fullName>
        <label>Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Fee_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2O_Hold_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hold Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Integrated_Backend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integrated Backend?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_MSK_Opportunity__c</fullName>
        <description>For Hinge &amp; Sword Products.</description>
        <label>MSK Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MSK_Opportunity_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Membership_Fee__c</fullName>
        <description>The per unit per month price of this Subscription. Formerly known as Membership Fee</description>
        <formula>SBQQ__QuoteLine__r.L2O_Membership_Fee__c</formula>
        <inlineHelpText>The per unit per month price of this Subscription. Formerly known as Membership Fee</inlineHelpText>
        <label>Subscription Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Monthly_Unit_Price__c</fullName>
        <formula>SBQQ__QuoteLine__r.L2O_Monthly_Price__c</formula>
        <label>Monthly Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Option_Type__c</fullName>
        <formula>TEXT(SBQQ__QuoteLine__r.SBQQ__OptionType__c)</formula>
        <label>Option Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Original_OrderItem_GUID__c</fullName>
        <formula>SBQQ__RevisedOrderProduct__r.L2O_GUID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original OrderItem GUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_PO_Number__c</fullName>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Package_List_Total__c</fullName>
        <formula>SBQQ__QuoteLine__r.SBQQ__PackageListTotal__c</formula>
        <label>Package List Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Package_Total__c</fullName>
        <formula>SBQQ__QuoteLine__r.SBQQ__PackageTotal__c</formula>
        <label>Package Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Package__c</fullName>
        <formula>SBQQ__QuoteLine__r.SBQQ__Bundle__c</formula>
        <label>Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Parent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Order Parent Products</relationshipLabel>
        <relationshipName>Order_Parent_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Payment_Term__c</fullName>
        <formula>TEXT(Order.SBQQ__PaymentTerm__c)</formula>
        <label>Payment Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Product_Code__c</fullName>
        <formula>SBQQ__QuoteLine__r.SBQQ__ProductCode__c</formula>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Product_Family__c</fullName>
        <formula>SBQQ__QuoteLine__r.SBQQ__ProductFamily__c</formula>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Sales_Type__c</fullName>
        <label>Sales Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lease</fullName>
                </value>
                <value>
                    <fullName>Purchase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Send_RMA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send RMA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Service_Platform__c</fullName>
        <label>Service Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HHS</fullName>
                </value>
                <value>
                    <fullName>LIV</fullName>
                </value>
                <value>
                    <fullName>TDH</fullName>
                </value>
                <value>
                    <fullName>INTL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Shipping_Address_Text__c</fullName>
        <description>To capture the shipping address in text for Edit Order Products LWC.</description>
        <formula>IF(SBQQ__Activated__c = True,

Shipping_Address_Text__Street__s + &quot;,&quot; + &quot; &quot; +
Shipping_Address_Text__City__s + &quot;,&quot; + &quot; &quot; +
TEXT(Shipping_Address_Text__StateCode__s) +  &quot;,&quot; + &quot; &quot; +
Shipping_Address_Text__PostalCode__s + &quot;,&quot; + &quot; &quot; +
TEXT(Shipping_Address_Text__CountryCode__s),

Shipping_Contact__r.MailingStreet + &quot;,&quot; + &quot; &quot; +
Shipping_Contact__r.MailingCity + &quot;,&quot; + &quot; &quot; +
Shipping_Contact__r.MailingState + &quot; &quot; +
Shipping_Contact__r.MailingPostalCode + &quot;,&quot; + &quot; &quot; +
Shipping_Contact__r.MailingCountry )</formula>
        <label>Shipping Address Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Unit_Of_Measure__c</fullName>
        <description>This field is used to capture unit of measure of quote line record.</description>
        <label>Unit Of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Device</fullName>
                </value>
                <value>
                    <fullName>Per Unit Per Month</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Each</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Upgraded_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Upgraded Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Upgraded Order Products</relationshipLabel>
        <relationshipName>Revised_Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Line_Item_ID_18__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Line Item ID (18)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line Group</label>
        <referenceTo>SBQQ__QuoteLineGroup__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the order product is activated.</description>
        <inlineHelpText>Indicates if the order product is activated.</inlineHelpText>
        <label>Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset created from this order product</description>
        <inlineHelpText>Asset created from this order product</inlineHelpText>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingFrequency__c</fullName>
        <description>Defines the billing frequency.</description>
        <inlineHelpText>Defines the billing frequency.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BillingType__c</fullName>
        <description>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets
            you bill your customers after the products or services are provided.</description>
        <inlineHelpText>The billing type that defines when the billing occurs.</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BlockPrice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The block price that is applied to this order product at order creation time.</description>
        <inlineHelpText>The block price that is applied to this order product at order creation time.</inlineHelpText>
        <label>Block Price</label>
        <referenceTo>SBQQ__BlockPrice__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__BookingsIndicator__c</fullName>
        <description>Indicates whether bookings are included.</description>
        <inlineHelpText>Indicates whether bookings are included.</inlineHelpText>
        <label>Bookings Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BookingsIndicator</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BundleRoot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The root bundle parent Order Product of components. This component will be deleted if its bundle root is deleted.</description>
        <inlineHelpText>An internally used field that points to the root of its bundle parent.</inlineHelpText>
        <label>Bundle Root</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Order Products (Bundle Root)</relationshipLabel>
        <relationshipName>BundleChildren</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__ChargeType__c</fullName>
        <description>The type of the product charge.</description>
        <inlineHelpText>The type of the product charge.</inlineHelpText>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__ChargeType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ContractAction__c</fullName>
        <description>The contract action where this order product is resulted from.</description>
        <inlineHelpText>The contract action where this order product is resulted from.</inlineHelpText>
        <label>Contract Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__ContractAction</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contract of the subscription that is created from this order product.</description>
        <inlineHelpText>The contract of the subscription that is created from this order product.</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the order product is contracted.</description>
        <inlineHelpText>Indicates if the order product is contracted.</inlineHelpText>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ContractingMethod__c</fullName>
        <description>Controls the contracting behavior of an Order Product. &quot;Inherit&quot; uses the behavior of the parent Order. &quot;Contract Separately&quot; generates a separate Contract for
            the Order Product. &quot;No Contract&quot; skips the Order Product altogether during the contracting process.</description>
        <inlineHelpText>Controls the contracting behavior of an Order Product.</inlineHelpText>
        <label>Contracting Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inherit</fullName>
                    <default>true</default>
                    <label>Inherit</label>
                </value>
                <value>
                    <fullName>Contract Separately</fullName>
                </value>
                <value>
                    <fullName>Do Not Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultSubscriptionTerm__c</fullName>
        <description>Term length of the subscription, which only applies if the product is a subscription. It is copied from the Subscription Term of the related product when the line item is first
            generated.</description>
        <inlineHelpText>Term length of the subscription, which only applies if the product is a subscription. It is copied from the Subscription Term of the related product when the line item is first
            generated.</inlineHelpText>
        <label>Default Subscription Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__DimensionType__c</fullName>
        <description>For multi-segmented Products, this is the type of price dimeension (e.g. &quot;YEAR&quot;, &quot;MONTH&quot;, &quot;QUARTER&quot;) of the order item.</description>
        <inlineHelpText>For multi-segmented Products, this is the type of price dimeension (e.g. &quot;YEAR&quot;, &quot;MONTH&quot;, &quot;QUARTER&quot;) of the order item.</inlineHelpText>
        <label>Segment Type</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Discount schedule applied to this order product.</description>
        <inlineHelpText>Discount schedule applied to this order product.</inlineHelpText>
        <label>Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__OrderProductBookings__c</fullName>
        <description>Amount of the order product’s total price.</description>
        <formula>IF( ISPICKVAL(SBQQ__BookingsIndicator__c  , &apos;Include&apos;) , UnitPrice * Quantity , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount of the order product’s total price.</inlineHelpText>
        <label>Order Product Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__OrderedQuantity__c</fullName>
        <description>The actual quantity of the product placed in the order.</description>
        <inlineHelpText>The actual quantity of the product placed in the order.</inlineHelpText>
        <label>Ordered Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceDimension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>References the price dimension applied to this order product.</description>
        <inlineHelpText>References the price dimension applied to this order product.</inlineHelpText>
        <label>Price Dimension</label>
        <referenceTo>SBQQ__Dimension__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Price schedule applied to this order product.</description>
        <inlineHelpText>Price schedule applied to this order product.</inlineHelpText>
        <label>Price Schedule</label>
        <referenceTo>SBQQ__PriceSchedule__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__PricingMethod__c</fullName>
        <description>Determines how the price for this line item is set. &quot;List&quot; = calculated by subtracting discount from list price. &quot;Cost&quot;  = calculated by adding markup to cost.</description>
        <inlineHelpText>Indicates how the price for this line item is calculated. &quot;List&quot; = subtracting discount from list price. &quot;Cost&quot; = adding markup to cost.</inlineHelpText>
        <label>Pricing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>List</fullName>
                    <default>true</default>
                    <label>List</label>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Percent Of Total</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ProductSubscriptionType__c</fullName>
        <description>Set the order item&apos;s product subscription type.</description>
        <inlineHelpText>Set the order item&apos;s product subscription type.</inlineHelpText>
        <label>Product Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__SubscriptionType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ProrateMultiplier__c</fullName>
        <description>Calculated ratio used to compute Prorated Price.</description>
        <inlineHelpText>Calculated ratio used to compute Prorated Price.</inlineHelpText>
        <label>Prorate Multiplier</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The quote line where this order product is created from.</description>
        <inlineHelpText>The quote line where this order product is created from.</inlineHelpText>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuotedListPrice__c</fullName>
        <description>List unit price for the product quoted by this line item. List Price originates from the price book.</description>
        <inlineHelpText>List unit price for the product quoted by this line item. List Price originates from the price book.</inlineHelpText>
        <label>Quoted List Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuotedQuantity__c</fullName>
        <description>The quoted quantity.</description>
        <inlineHelpText>The quoted quantity.</inlineHelpText>
        <label>Quoted Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__RequiredBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Required By</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RevisedOrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>References the order product that this order product revises.</description>
        <inlineHelpText>References the order product that this order product revises.</inlineHelpText>
        <label>Revised Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Order Products (Revised Order Product)</relationshipLabel>
        <relationshipName>RevisingOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentIndex__c</fullName>
        <description>For multi-segmented products, Index representing this order product&apos;s position in the segment table.</description>
        <inlineHelpText>For multi-segmented products, Index representing this order product&apos;s position in the segment table.</inlineHelpText>
        <label>Segment Index</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__SegmentKey__c</fullName>
        <description>For multi-segmented Products, this is a shared key used to group multi-dimensional Quote Lines together.</description>
        <inlineHelpText>For multi-segmented Products, this is a shared key used to group multi-dimensional Quote Lines together.</inlineHelpText>
        <label>Segment Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShippingAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipping Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>ShippingAccountOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Status__c</fullName>
        <description>The current state of the order product.</description>
        <inlineHelpText>Indicates the current state of the order product. It is defaulted to Draft when an order is created.</inlineHelpText>
        <label>Activation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__OrderProductStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionPricing__c</fullName>
        <description>Method of calculating the subscription price. A blank value indicates that the line item isn&apos;t a subscription product.</description>
        <inlineHelpText>Method of calculating the subscription price. A blank value indicates that the line item isn&apos;t a subscription product.</inlineHelpText>
        <label>Subscription Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__SubscriptionPricing</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionTerm__c</fullName>
        <label>Subscription Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionType__c</fullName>
        <description>Indicates the subscription type to determine contract&apos;s pricing.</description>
        <inlineHelpText>Indicates the subscription type to determine contract&apos;s pricing.</inlineHelpText>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__ProductSubscriptionType__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>SBQQ__SubscriptionType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscription created from this order product</description>
        <inlineHelpText>Subscription created from this order product</inlineHelpText>
        <label>Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>SubscriptionOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__TaxAmount__c</fullName>
        <description>Estimated tax amount</description>
        <inlineHelpText>Estimated tax amount</inlineHelpText>
        <label>Estimated Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__TaxCode__c</fullName>
        <description>Specifies the tax code for taxation rules.</description>
        <inlineHelpText>Specifies the tax code for taxation rules.</inlineHelpText>
        <label>Tax code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__TermDiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Term Discount Schedule applied to this order product.</description>
        <inlineHelpText>Term Discount Schedule applied to this order product.</inlineHelpText>
        <label>Term Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Order Products (Term Discount Schedule)</relationshipLabel>
        <relationshipName>TermedOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__TerminatedDate__c</fullName>
        <description>Date that this order product&apos;s related subscription was terminated</description>
        <inlineHelpText>Date that this order product&apos;s related subscription was terminated</inlineHelpText>
        <label>Terminated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__UnproratedNetPrice__c</fullName>
        <description>The full-term Net Unit Price.</description>
        <inlineHelpText>The full term net price for individual line.</inlineHelpText>
        <label>Full-Term Net Unit Price</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradedSubscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscription being upgraded by this quote line.</description>
        <inlineHelpText>Subscription being upgraded by this quote line. When the quote is contracted this subscription will have its Terminated Date field populated.</inlineHelpText>
        <label>Upgraded Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Upgraded Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Address_Text__c</fullName>
        <label>Shipping Address</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <formula>IF(SBQQ__Activated__c = True, 

HYPERLINK(&quot;https://www.google.com/maps?language=en_US&amp;q=&quot; +
Shipping_Address_Text__Street__s  + &quot;,&quot; +
Shipping_Address_Text__City__s  + &quot;,&quot; +
TEXT(Shipping_Address_Text__StateCode__s) + &quot;,&quot; +
Shipping_Address_Text__PostalCode__s  , &quot; &quot; +

Shipping_Address_Text__Street__s + BR() +
Shipping_Address_Text__City__s + &quot;,&quot; + &quot; &quot; + 
TEXT(Shipping_Address_Text__StateCode__s) + &quot; &quot; + 
Shipping_Address_Text__PostalCode__s + BR() +
TEXT(Shipping_Address_Text__CountryCode__s)),

HYPERLINK(&quot;https://www.google.com/maps?language=en_US&amp;q=&quot; +
Shipping_Contact__r.MailingStreet + &quot;,&quot; +
Shipping_Contact__r.MailingCity + &quot;,&quot; +
Shipping_Contact__r.MailingState + &quot;,&quot; +
Shipping_Contact__r.MailingPostalCode , &quot; &quot; +

Shipping_Contact__r.MailingStreet + BR() +
Shipping_Contact__r.MailingCity + &quot;,&quot; + &quot; &quot; + 
Shipping_Contact__r.MailingState + &quot; &quot; + 
Shipping_Contact__r.MailingPostalCode + BR() + 
Shipping_Contact__r.MailingCountry ))</formula>
        <label>Shipping Address</label>
        <type>Text</type>
    </fields>
</CustomObject>